@@ -67,10 +67,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                    <release>13</release>
-                    <source>13</source>
-                    <target>13</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -93,14 +90,6 @@
                 <version>3.0.0-M4</version>
                 <configuration>
                     <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>13</source>
-                    <target>11</target>
-                    <release>13</release>
                 </configuration>
             </plugin>
         </plugins>
